2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* NEWS: New port to Cell Broadband Engine SPU.
	* MAINTAINERS: Add myself as spu maintainer.

2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* configure.tgt: Enable gdbserver for SPU target.
	* configure.ac: Build gdbserver when gdb_native is yes.
	* configure: Regenerate.
	* regformats/reg-spu.dat: New file.

2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* findvar.c (address_from_register): New function.
	* value.h (address_from_register): Add prototype.
	* dwarf2loc.c (dwarf_expr_read_reg): Use address_from_register.

2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/powerpc/spu-linux.mh: New file.
	* config/spu/spu.mt: New file.
	* configure.ac: Provide gdb_native configuration variable.
	* configure: Regenerate.
	* configure.host: Support powerpc64 to spu 'pseudo-native' mode.
	* configure.tgt: Add "spu" target_cpu and "spu*-*-*" target.
	* Makefile.in (spu_tdep_h): New variable.
	(ALLDEPFILES): Add spu-linux-nat.c and spu-tdep.c
	(spu-linux-nat.o, spu-tdep.o): Add dependencies.
	* spu-linux-nat.c: New file.
	* spu-tdep.c: New file.
	* spu-tdep.h: New file.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* osabi.c (gdbarch_lookup_osabi): Do not return
	GDB_OSABI_UNINITIALIZED.

2006-11-21  Pedro Alves  <pedro_alves@portugalmail.pt>

	Checked in by Joel Brobecker  <brobecker@adacore.com>
	* parse.c (write_exp_msymbol): Check SYMBOL_BFD_SECTION before
	dereferencing it.

2006-11-20  Joel Brobecker  <brobecker@adacore.com>

	* README: Remove obsolete information.

2006-11-20  Andrew Cagney  <cagney@redhat.com>

	* linux-nat.h: Refer to GNU/Linux or Linux kernel.
	* linux-nat.c (lin_lwp_attach_lwp, linux_nat_thread_alive): Ditto.
	* infcmd.c (attach_command): Ditto.
	* hppa-linux-tdep.c (hppa_linux_regset): Ditto.
	* mn10300-linux-tdep.c: Ditto.  Update copyright year.
	* frv-linux-tdep.c: Ditto.  Update copyright year.

2006-11-19  Joel Brobecker  <brobecker@adacore.com>
