@@ -1,3 +1,10 @@
+2006-12-02  Joel Brobecker  <brobecker@adacore.com>
+
+	From Daniel Jacobowitz  <dan@codesourcery.com>
+	* utils.c (string_to_core_addr): Use error instead of
+	internal_error.
+	* mi/mi-main.c (mi_execute_command): Check for a NULL message.
+
 2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* NEWS: New port to Cell Broadband Engine SPU.
